fix: overflow issues with styling

--- a/src/Components/Playlist/Playlist.css
+++ b/src/Components/Playlist/Playlist.css
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	overflow-y: scroll;
+	overflow-y: auto;
 	width: 37%;
 	max-height: 950px;
 	padding: 2.27rem 1.16rem;
